add score
