# services/semantic/src/domain/models/search.py
@@ -1,6 +1,7 @@
-class SearchResultModel:
-    def __init__(self, id, file_path, source_file, similarity):
-        self.id = id
-        self.file_path = file_path
-        self.source_file = source_file
-        self.similarity = similarity
+from src.domain.models.paper import PaperModel
+from dataclasses import dataclass
+
+@dataclass(slots=True)
+class SearchResult:
+    paper: PaperModel
+    score: float
